--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,21 @@ a:hover { color: #036; }
     \\ ========================================== //
 */
 
+nav{
+	display:block;
+	float:left;
+	width:20%;
+}
+
+input{
+	width:100%;
+}
+
+section{
+	display:block;
+	float:right;
+	width:80%;
+}
 
 ul{
 	list-style:none;
