--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ ul{
 
 li{
 	clear: both;
-	margin 10 auto;
+	padding-bottom: 20px;
 	display: block;
 }
 
@@ -155,6 +155,10 @@ img{
 
 #user{
 	font-size: 125%;
+}
+
+.twitter-anywhere-tweet-box{
+	width:100%;
 }
 
 
