--- a/css/style.css
+++ b/css/style.css
@@ -251,8 +251,21 @@ img{
 }
 
 @media screen and (max-device-width: 480px) {
-
-  /* html { -webkit-text-size-adjust:none; -ms-text-size-adjust:none; } */
+	container{
+		width: 500px;
+	}
+	header{
+		width: 480px;
+		float: none;
+	}
+	nav{
+		width: 480px;
+		float: none;
+	}
+	section{
+		width: 480px;
+		float: none;
+	}
 }
 
 
