--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,8 @@ img{
 }
 
 #user{
-	font-size: 125%;
+	font-size: 130%;
+	font-weight:bold;
 }
 
 .twitter-anywhere-tweet-box{
@@ -251,8 +252,21 @@ img{
 }
 
 @media screen and (max-device-width: 480px) {
-
-  /* html { -webkit-text-size-adjust:none; -ms-text-size-adjust:none; } */
+	container{
+		width: 500px;
+	}
+	header{
+		width: 480px;
+		float: none;
+	}
+	nav{
+		width: 480px;
+		float: none;
+	}
+	section{
+		width: 480px;
+		float: none;
+	}
 }
 
 
