--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ ul{
 
 li{
 	clear: both;
-	height:100%;
+	min-height:52px;
 	padding: 5px;
 	display: block;
 }
@@ -224,7 +224,13 @@ img{
 	float:left;
 }
 
-
+em{
+	vertical-align: bottom;
+	font-style: itallic;
+	font-size: 80%;
+	float:right;
+	margin-right: 5px;
+}
 
 
 
