--- a/css/style.css
+++ b/css/style.css
@@ -153,11 +153,17 @@ section li:nth-child(even){
 
 section li{
 	-webkit-transition: -webkit-transform 0.6s ease-in-out;
+	-moz-transition: -moz-transform 0.6s ease-in-out;
+	transition: transform 0.6s ease-in-out;
 }
 
 section li:hover{
 	-webkit-transform: scale(1.15);
+	-moz-transform: scale(1.15);
+	transform: scale(1.15);
 	-webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+	-moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+	box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 img{
